example/secondfile/objects/DHStatus_Intra_Cloud_Test_Parameters__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Intra Cloud Test Parameters</description>
    <fields>
        <fullName>DHStatus_Testing_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Intra Cloud Test Parameters-DHStatus-Testing Details</description>
        <label>DHStatus-Testing Details</label>
        <referenceTo>DHStatus_Testing_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Intra Cloud Test Parameters</relationshipLabel>
        <relationshipName>DHStatus_Intra_Cloud_Test_Parameters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Intra Cloud Test Parameters</description>
        <label>Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Intra Cloud Test Parameters</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Intra Cloud Test Parameters</label>
    <nameField>
        <displayFormat>IC-{0000}</displayFormat>
        <label>DHStatus-Intra Cloud Test Parameters Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Intra Cloud Test Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>